Switch from margin to padding and move it to the container-fluid div so gray bg extends length of page and maintains bottom spacing across pages Include fix to prevent filter appended button from wrapping in Safari
Fix for https://github.com/openshift/origin/issues/7654

--- a/assets/app/styles/_substructure.less
+++ b/assets/app/styles/_substructure.less
@@ -73,9 +73,11 @@ html,body {
         }
         .middle-content {
           .flex(@columns: 1 1 auto);
-          margin-bottom: 20px;
           position: relative;
           width: 100%;
+          .container-fluid {
+            padding-bottom: 20px;
+          }
         }
       }
     }
